--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "serve": "^10.1.2",
     "vue": "^2.6.6",
+    "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
     "vuetify": "^1.5.3"
   },
